<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username:</string>
    <string name="submit">Submit</string>
    <string name="prompt">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="pass_enter">Please enter your password</string>
    <string name="confirm">Confirm:</string>
    <string name="confirm_field">Confirm your password</string>
    <string name="random">Random</string>

</resources>
