<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/user" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content"
            android:hint="@string/prompt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="75"
            android:hint="@string/pass_enter"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_field"
        android:layout_below="@id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="75"
            android:hint="@string/confirm_field"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/confirm_field"
        android:layout_below="@id/confirm_field"
        android:text="@string/submit" />

</RelativeLayout>
